first clone and commit
add the meta viewport tag for smartphone displays to functions lesson
simplified syllabus page to two columns

--- a/lessons/functions.html
+++ b/lessons/functions.html
@@ -2,6 +2,7 @@
 <html lang=en>
     <head>
         <meta charset=UTF-8>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SRJC Fall 2012 Javascript &amp; JQuery CS55.11</title>
         <link href=../bootstrap/css/bootstrap.css rel=stylesheet>
         <link href=../lib/prettify/prettify.css rel=stylesheet>
