--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <a class="brand" href="#">Javascript &amp; JQuery CS 55.11</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="#">Syllabus</a></li>
              
-              <li><a href="#">Elluminate</a></li>
+              <li><a href="#">Lessons</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -48,7 +48,7 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="span8">
-        <h3>Course Information</h3>
+          <h2>Course Information</h2>
           <h4>Required Materials</h4>
            <p>There is NO REQUIRED SOFTWARE, although you will need a good code editor and a webserver account (an SRJC student account is fine, but you may also use your own domain or another host.) You will also need to use a current version of an HTML5 browser with a great element inspector (Chrome, FireFox, Opera or Internet Explorer 9+ will work.)</p>
 
@@ -230,6 +230,24 @@ heading. Capitalizing whole words is termed as SHOUTING!</li>
 <p>Students with disabilities who believe they need accommodations in this class are
 encouraged to contact Disability Resources (527-4278), Analy Village - C, as soon as
 possible to better ensure such accommodations are implemented in a timely fashion.</p>
+
+<div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'javascriptcs5511'; // required: replace example with your forum shortname
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        
+
+
        </div>
         <div class="span4">
           <h2>Class Outline</h2>
@@ -238,13 +256,13 @@ possible to better ensure such accommodations are implemented in a timely fashio
           <table width="95%" class="table table-striped">
   <tr>
     <td width="18%">Aug 21</td>
-    <td width="44%">Introduction to Javascript</td>
+    <td width="44%">Javascript Fundamentals</td>
     <td width="21%">&nbsp;</td>
     <td width="17%">&nbsp;</td>
   </tr>
   <tr>
     <td>Aug 28</td>
-    <td>Javascript Fundamentals</td>
+    <td>Variables, Functions, Operators, Conditionals and Loops</td>
     <td>Project 1</td>
     <td>&nbsp;</td>
   </tr>
@@ -310,14 +328,14 @@ possible to better ensure such accommodations are implemented in a timely fashio
   </tr>
   <tr>
     <td>Nov 13 </td>
-    <td>professional dev day</td>
-    <td>Project 6</td>
+    <td>no class</td>
+    <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
     <td>Nov 20</td>
     <td>JQuery UI</td>
-    <td>&nbsp;</td>
+    <td>Project 6</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
