--- a/lessons/functions.html
+++ b/lessons/functions.html
@@ -15,8 +15,8 @@
                     <a class=brand href=../index.html>Javascript &amp; JQuery CS 55.11</a>
                     <div>
                         <ul class=nav>
-                            <li><a href=../index.html>Home</a></li>
-                            <li><a href="#">Elluminate</a></li>
+                            <li><a href=../index.html>Syllabus</a></li>
+                            
                             <li class=active><a href="#">Lessons</a></li>
                         </ul>
                     </div>
