--- a/lessons/functions.html
+++ b/lessons/functions.html
@@ -228,6 +228,7 @@ var myFunction = function(parameter) {
         <script src=../bootstrap/js/jquery.js></script>
         <script src=../bootstrap/js/bootstrap.js></script>
         <script src=../lib/prettify/prettify.js></script>
+        <script type="text/javascript" src="bootstrap/js/bootstrap-dropdowns.js"></script>
         <script>
             $(function() {
                 prettyPrint();
