implement ajax based menu
content updates

--- a/lessons/functions.html
+++ b/lessons/functions.html
@@ -9,22 +9,9 @@
         <link href=../bootstrap/css/fall2012.css rel=stylesheet>
     </head>
     <body>
-        <div class="navbar navbar-fixed-top">
-            <div class=navbar-inner>
-                <div class=container>
-                    <a class=brand href=../index.html>Javascript &amp; JQuery CS 55.11</a>
-                    <div>
-                        <ul class=nav>
-                            <li><a href=../index.html>Syllabus</a></li>
-                            
-                            <li class=active><a href="#">Lessons</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
         <div class=container>
-            <div class=hero-unit>
+            <div class=callout>
                 <h1>JavaScript Functions &mdash; Creating Functions</h1>
                 <p>Learn how and why to create functions in your JavaScript code.</p>
             </div>
@@ -226,9 +213,9 @@ var myFunction = function(parameter) {
             </div>
         </div>
         <script src=../bootstrap/js/jquery.js></script>
+        <script type="text/javascript"  src="../bootstrap/js/fall2012.js"></script>
         <script src=../bootstrap/js/bootstrap.js></script>
         <script src=../lib/prettify/prettify.js></script>
-        <script type="text/javascript" src="bootstrap/js/bootstrap-dropdowns.js"></script>
         <script>
             $(function() {
                 prettyPrint();
@@ -237,5 +224,6 @@ var myFunction = function(parameter) {
                 })
             });
         </script>
+         <script type="text/javascript" src="../bootstrap/js/bootstrap-dropdowns.js"></script>
     </body>
 </html>
