Fixed ajax menudropdown issue
Updates to menu can be made at /includes/menu.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       <div class="row callout">
         
         <div class="span8">   
-        <p><strong>Welcome to Javascript!</strong> <br>
-<br>
-This class will open your mind about web design and programming - whether you are an experienced programmer or not. </p>
+        <h3>Welcome to Javascript!</h3>
+<p>This class will open your mind about web design and programming - whether you are an experienced programmer or not. </p>
         <p>This class is a <em>blended class</em>. While you enrolled in either  online section 1371 or  in-class section 1516 on Tuesday evenings, the class is essentially an online class, the Tuesday evening lecture/labs are optional for students in either section - no attendance will be taken, but it is always nice to have some people in the room. The classes are   also broadcast live and archived for later viewing. While attendance is not required, the material in the lectures is generally required material for the class, projects and exams. </p>
         <p>This syllabus page is the primary hub for information about the class throughout the semester, so you may want to bookmark it now. </p>
         <p>Check in to the CATE system now to access exams and gradebooks throughout the semester. </p>
@@ -387,6 +386,6 @@ possible to better ensure such accommodations are implemented in a timely fashio
 <script type="text/javascript" src="bootstrap/js/jquery.js"></script>
 <script type="text/javascript"  src="bootstrap/js/fall2012.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-<script type="text/javascript" src="bootstrap/js/bootstrap-dropdowns.js"></script>
+<script type="text/javascript" src="bootstrap/js/bootstrap-dropdowns-set.js"></script>
 </body>
 </html>
