Content and style changes
and tweeking dropdown function

--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@ Fill out the form and enter the passcode: 341189<br>
   <p>For web designers that are new to programming:</p>
     <ul>
      
-      <li>Scriptin' with JavaScript and Ajax: A Designer's Guide (Voices That Matter) by Charles Wyke-Smith</li>
+      <li><a href="http://www.amazon.com/Scriptin-JavaScript-Ajax-Designers-Voices/dp/0321572602/ref=sr_1_1?s=books&ie=UTF8&qid=1345157360&sr=1-1&keywords=scripting+with+javascript+and+ajax">Scriptin' with JavaScript and Ajax: A Designer's Guide (Voices That Matter) by Charles Wyke-Smith</a></li>
     </ul>
   <p>For programmers that are new to Javascript:</p>
     <ul>
-      <li>JavaScript: The Good Parts by Douglas Crockford</li>
-      <li>Eloquent JavaScript: A Modern Introduction to Programming by Marijn Haverbeke</li>
-      <li>JavaScript: The Definitive Guide: Activate Your Web Pages (Definitive Guides) by David Flanagan</li>
+      <li><a href="http://www.amazon.com/JavaScript-Good-Parts-Douglas-Crockford/dp/0596517742">JavaScript: The Good Parts by Douglas Crockford</a></li>
+      <li><a href="http://www.amazon.com/Eloquent-JavaScript-Modern-Introduction-Programming/dp/1593272820/ref=sr_1_1?s=books&ie=UTF8&qid=1345157280&sr=1-1&keywords=eloquent+javascript">Eloquent JavaScript: A Modern Introduction to Programming by Marijn Haverbeke</a></li>
+      <li><a href="http://www.amazon.com/JavaScript-Definitive-Guide-Activate-Guides/dp/0596805527/ref=sr_1_1?s=books&ie=UTF8&qid=1345157309&sr=1-1&keywords=definitive+guide+javascript">JavaScript: The Definitive Guide: Activate Your Web Pages (Definitive Guides) by David Flanagan</a></li>
     </ul>
     <p>Other  books that supplement the curriculum:</p>
     <ul>
-      <li>Simply JavaScript by Kevin Yank and Cameron Adams</li>
-      <li>jQuery in Action, Second Edition by Bear Bibeault and Yehuda Katz</li>
+      <li><a href="http://www.amazon.com/Simply-JavaScript-Kevin-Yank/dp/0980285801/ref=sr_1_1?s=books&ie=UTF8&qid=1345157218&sr=1-1&keywords=simply+javascript">Simply JavaScript by Kevin Yank and Cameron Adams</a></li>
+      <li><a href="http://www.amazon.com/jQuery-Action-Second-Bear-Bibeault/dp/1935182323/ref=sr_1_1?s=books&ie=UTF8&qid=1345157253&sr=1-1&keywords=jquery+in+action">jQuery in Action, Second Edition by Bear Bibeault and Yehuda Katz</a></li>
     </ul>
     <h4>About the Instructor</h4>
 <img src="images/jay5.jpg" alt="Jay Peretz" width="140" height="145" class="image-left">
