--- a/index.html
+++ b/index.html
@@ -36,18 +36,20 @@
 </div>
 <div class="span3 well"> 
  
-<h3>Class Resources</h3>
-<h4>Elluminate</h4>
-Optional phone access:<br>
-Dial : (888) 886-3951<br>
-Or: 913-312-3202<br>
-passcode: 341189<br>
-Computer Access:<br>
-Visit <a href="http://www.cccconfer.org/">www.cccconfer.org</a> <br>
-Click the Student Log In button under the <strong>Teach & Confer logo</strong><br>
-Locate your meeting and click Go
-Fill out the form and enter the passcode: 341189<br>
-
+<h3>Lecture/Labs</h3>
+<p>Tuesdays 5:30-8:30PM<br>
+  Maggini Hall Room 2923
+</p>
+<h3>Elluminate</h3>
+<p>Visit <a href="http://www.cccconfer.org/">www.cccconfer.org</a> <br>
+  Click the Student Log-In button under the <strong>Teach & Confer logo</strong><br>
+  Locate your meeting and click Go
+  Fill out the form and enter the passcode: 341189</p>
+<h3>Office Hours</h3>
+<p>Tuesdays 4:00-5:00PM<br>
+  Maggini Hall CS Dept Adjunct Office
+  <br>
+</p>
 </div>
 
 </div>
