expanded menu dropdowns and content

--- a/index.html
+++ b/index.html
@@ -254,35 +254,35 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <td width="18%">Aug 21</td>
     <td width="44%">Javascript Fundamentals</td>
     <td width="21%">&nbsp;</td>
-    <td width="17%">&nbsp;</td>
+   
   </tr>
   <tr>
     <td>Aug 28</td>
-    <td>Variables, Functions, Operators, Conditionals and Loops</td>
+    <td>Variables, Operators, Conditionals and Loops</td>
     <td>Project 1</td>
    
   </tr>
   <tr>
     <td>Sep 4</td>
-    <td>Events and Objects</td>
+    <td>Numbers, Strings and Dates      </td>
    
     <td>Quiz 1</td>
   </tr>
   <tr>
     <td>Sept 11</td>
-    <td>Document and Window Objects</td>
+    <td>Functions, Events and Objects </td>
     <td>Project 2</td>
     
   </tr>
   <tr>
     <td>Sept 18</td>
-    <td>Working with Arrays Numbers and Dates</td>
+    <td>Structured Data</td>
    
     <td>Quiz 2</td>
   </tr>
   <tr>
     <td>Sept 25</td>
-    <td>Handling Strings</td>
+    <td>Document and Window Objects</td>
     <td>Project 3</td>
   
   </tr>
