--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
 <p>You may use the Computer Studies labs in Santa Rosa and Petaluma during regularly scheduled lab hours, or you may also work at your own computer. You MUST be self-sufficient with basic webserver fundamentals and be able to use FTP to deploy a website.</p>
            <p>This class has no REQUIRED textbooks, but  the curriculum is loosely based on these two books . There are many fantastic Javascript books, I highly recomment that you  have at least one or two available as you take this class.</p>
-<p><img src="images/pollock.jpg" width="150" height="165" class="image-left"><strong>Javascript: A Beginner's Guide Third Edition </strong><br>
+<p><img src="images/pollock.jpg" width="150" height="165" class="image-left"><strong><a href="http://www.amazon.com/JavaScript-Beginners-Guide-Third-Edition/dp/0071632956">Javascript: A Beginner's Guide Third Edition</a></strong><br>
   by John Pollock <br>
   Published by McGraw Hill. <br>
   ISBN 978-0-07-163295-9</p>
   
      <div class="clearfloats"></div>
-<p><img src="images/ninja.jpg" width="175" height="175" class="image-left"><strong>JQuery Novice to Ninja</strong><br>
+<p><img src="images/ninja.jpg" width="175" height="175" class="image-left"><strong><a href="http://www.amazon.com/jQuery-Novice-Ninja-Earle-Castledine/dp/0987153013/ref=sr_1_1?s=books&ie=UTF8&qid=1345238345&sr=1-1&keywords=jquery+novice+to+ninja">JQuery Novice to Ninja</a></strong><br>
   by Earle Castledine &amp; Craig Sharkie<br>
   Published by Sitepoint<br>ISBN: 978-0-9805768-5-6
   
@@ -96,7 +96,7 @@
     </ul>
     <h4>About the Instructor</h4>
 <img src="images/jay5.jpg" alt="Jay Peretz" width="140" height="145" class="image-left">
-<p>Jay Peretz is a part time Adjunct Faculty member in Computer Studies at Santa Rosa Junior College.   Jay teaches web development classes in HTML, CSS, Javascript, Dreamweaver, Flash, PHP, SQL, XML and Actionscript.</p>
+<p>Jay Peretz is a part time Adjunct Faculty member in Computer Studies at <a href="http://www.santarosa.edu/">Santa Rosa Junior College</a>.   Jay teaches web development classes in HTML, CSS, Javascript, Dreamweaver, Flash, PHP, SQL, XML and Actionscript.</p>
           <div class="clearfloats"></div>
            <h4>Grading Policy </h4>
  <p>Your final grade will be based on the following:</p>
@@ -270,13 +270,13 @@ possible to better ensure such accommodations are implemented in a timely fashio
   </tr>
   <tr>
     <td>Sept 11</td>
-    <td>Functions, Events and Objects </td>
+    <td><a href="lessons/functions.html">Functions</a>, Events and Objects </td>
     <td>Project 2</td>
     
   </tr>
   <tr>
     <td>Sept 18</td>
-    <td>Structured Data</td>
+    <td>Structured Data - Arrays &amp; JSON</td>
    
     <td>Quiz 2</td>
   </tr>
@@ -290,7 +290,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <td>Oct 2</td>
     <td>Forms and AJAX</td>
     
-    <td>&nbsp;</td>
+    <td>Project 4</td>
   </tr>
   <tr>
     <td>Oct 9</td>
@@ -301,7 +301,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
   <tr>
     <td>Oct 16</td>
     <td>JQuery Selection</td>
-    <td>Project 4</td>
+    <td>&nbsp;</td>
    
   </tr>
   <tr>
