--- a/lessons/expressions.html
+++ b/lessons/expressions.html
@@ -12,8 +12,8 @@
         
         <div class=container>
             <div class=callout>
-                <h1>JavaScript Fundamentals &mdash;Programming a Webpage</h1>
-                <p>Learn how to incorporate JavaScript code on your webpages.</p>
+                <h1>Variables, Expressions and Operators</h1>
+                <p>Basic programming concepts.</p>
             </div>
             <div class=row>
                 <section class=span4>
@@ -25,12 +25,10 @@ Javascript uses sytax from C and naming conventions from <strong>Java</strong>. 
                    <h3>What does Javascript do?</h3>
                       <ul>
                      <li>Like HTML and CSS, Javascript is intepreted and executed by web browsers.</li>
+                     <li>HTML is a markup language to structure content for users.</li>
+                     <li>CSS is a declarative language to format and style content for users.</li>
                      <li>Javascript is a scripting language used to create dynamic behaviors between web content and users.</li> <li>For the purposes of this class, we'll always assume unless stated otherwise, that we are referring to Javascript running within a web browser. However, Javascript as a programming language may be implemented in a variety of ways on different platforms and is becoming increasingly popular for web server scripting (node.js) and embedded programming.    </li>
                    </ul>
-                   <div class="well">
-                   <img src="../images/css_three-layers.png" hspace="5" vspace="5" ><br>image courtesy of Sitepoint
-                   
-                   </div>
                     <h3>A Brief History of Javascript</h3>
                    <ul>
                      <li>Introduced by Netscape in 1995 in the Navigator 2.0</li>
@@ -39,7 +37,7 @@ Javascript uses sytax from C and naming conventions from <strong>Java</strong>. 
                      <li>JavaScript is now officially managed by <a href="http://en.wikipedia.org/wiki/Mozilla_Foundation" title="Mozilla Foundation">Mozilla Foundation</a>, and new language features are added periodically. Each browser's support for these new language features may vary, but all major current browser versions support Javascript.</li>
                    </ul> </section>
                 <section class=span4>
-                    <h3>Adding Javascript to a webpage</h3>
+                  <h3>Adding Javascript to a webpage</h3>
                     <ul><li>A script can be placed within a SCRIPT tag in your HTML file, within either the HEAD or the BODY element.</li> <code>
                         <pre class="prettyprint linenums">
 &lt;script type="text/javascript"&gt;
@@ -81,9 +79,8 @@ Javascript uses sytax from C and naming conventions from <strong>Java</strong>. 
                     <section class=well>
                         <h2>Take Aways</h2>
                         <ul>
-                            <li>Javascript, like HTML and CSS, is a feature of web browsers</li>
-                            <li>Javascript enables web designers to add a 'behavior' dimension to  webpages</li>
-                            <li>Javascript is an accessible and easy way for web designers to learn programming</li>
+                            <li>Javascript is accessible and easy to use</li>
+                            <li>Javascript works with elements I'm already familar with - HTML and CSS</li>
                         </ul>
                     </section>
                     <section class="well exercises">
