--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@ possible to better ensure such accommodations are implemented in a timely fashio
   <tr class="current-week">
     <td width="18%">Aug 21</td>
     <td width="44%"><a href="lessons/fundamentals.html">Javascript Fundamentals</a><br>
-      <a href="lessons/expressions.html">Variables &amp; Expressions</a></td>
+      <a href="lessons/expressions.html">Variables, Operators &amp; Expressions</a></td>
     <td width="21%">&nbsp;</td>
    
   </tr>
   <tr>
     <td>Aug 28</td>
-    <td>Operators, Conditionals and Loops</td>
+    <td>Conditionals and Loops</td>
     <td>Project 1</td>
    
   </tr>
