added examples and other content updates

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      
       <div class="row callout">
         
-        <div class="span8">   
+        <div class="span4">   
         <h3>Welcome to Javascript!</h3>
 <p>This class will open your mind about web design and programming - whether you are an experienced programmer or not. </p>
         <p>This class is a <em>blended class</em>. While you enrolled in either  online section 1371 or  in-class section 1516 on Tuesday evenings, the class is essentially an online class, the Tuesday evening lecture/labs are optional for students in either section - no attendance will be taken, but it is always nice to have some people in the room. The classes are   also broadcast live and archived for later viewing. While attendance is not required, the material in the lectures is generally required material for the class, projects and exams. </p>
@@ -34,7 +34,7 @@
 </div>
 
 </div>
-<div class="span3 well"> 
+<div class="span7 well"> 
  
 <h3>Lecture/Labs</h3>
 <p>Tuesdays 5:30-8:30PM<br>
@@ -50,6 +50,9 @@
   Maggini Hall CS Dept Adjunct Office
   <br>
 </p>
+<h3>Class Forums</h3>
+<p>To post a question or comment to the instructor or class, you can either use the
+<a href="http://online.santarosa.edu/cgi-bin/autocate/presentation/makepre.cgi">Class Message Board on CATE</a>, or you can post a comment at the bottom of any webpage on the syllabus.   Students can update their profiles on CATE to opt out of receiving emails from the Class Message Board.   Students can also create profiles on Disqus when leaving a comment, allowing them to set email notifications to follow discussions.  
 </div>
 
 </div>
