--- a/lessons/expressions.html
+++ b/lessons/expressions.html
@@ -33,8 +33,8 @@
 var x;
 x = 18;
 var y = (x<21) ? "N" : "Y" // ternary assignment
-</pre>Statements
-                    </code>
+</pre>
+                        </code>
                         <dt>Expression</dt>
                         <dd>A piece of Javascript code that produces a value.  An expression can be a literal, a name (variable) and/or can contain operators on or between literals and variables.</dd>
                         <code>
@@ -42,7 +42,7 @@ var y = (x<21) ? "N" : "Y" // ternary assignment
 x
 8
 "N"
-</pre>Expressions
+</pre>
                     </code>
                          <dt>Literal</dt>
                         <dd>An explicit expression of a value.   Numbers, strings, objects, arrays and even functions can be expressed as literals in Javascript.</dd>
@@ -51,7 +51,7 @@ x
 (100 + 4) - 25 // numeric literal
 "Javascript" // string literal
 {reviewer:"George V",points:5}  // object literal
-</pre>Literals
+</pre>
                     </code>
                     </dl>
                     </section>
@@ -65,7 +65,7 @@ x
 var x;
 var y:string;
 var z:Date;
-</pre>Declaration statements
+</pre>
                     </code>
                          <dt>Value</dt>
                         <dd>The inherent value of an expression, typically a number, string or object.   Javascript has built in values such as true, false, NaN (Not a Number), null, and undefined.</dd>
@@ -74,7 +74,7 @@ var z:Date;
 x = 21;
 y = x-5;
 var z = y * 12;
-</pre>Assignment statements
+</pre>
                     </code>
                         <dt>Operator</dt>
                         <dd>Changes the value of expressions. There are mathematical, logical, assignment, comparison and other types of operators in Javascript.</dd>
@@ -85,7 +85,7 @@ var z = y * 12;
 x = 21; //assignment operator
 y = x - 5; //mathematical MINUS operator
 y = !y;  // logical NOT operator
-</pre>Operators
+</pre>
                     </code>
                 
                  
