--- a/index.html
+++ b/index.html
@@ -23,36 +23,33 @@
       <div class="row callout">
         
         <div class="span4">   
-        <h3>Welcome to Javascript!</h3>
-<p>This class will open your mind about web design and programming - whether you are an experienced programmer or not. </p>
-        <p>This class is a <em>blended class</em>. While you enrolled in either  online section 1371 or  in-class section 1516 on Tuesday evenings, the class is essentially an online class, the Tuesday evening lecture/labs are optional for students in either section - no attendance will be taken, but it is always nice to have some people in the room. The classes are   also broadcast live and archived for later viewing. While attendance is not required, the material in the lectures is generally required material for the class, projects and exams. </p>
-        <p>This syllabus page is the primary hub for information about the class throughout the semester, so you may want to bookmark it now. </p>
-        <p>Check in to the CATE system now to access exams and gradebooks throughout the semester. </p>
-         <div class="btn-group">
-<a href="https://online.santarosa.edu/cgi-bin/autocate/student/checkin.cgi?15146" class="btn btn-primary">CATE check-in for ONLINE section 1371</a>
-<a href="https://online.santarosa.edu/cgi-bin/autocate/student/checkin.cgi?15147" class="btn btn-primary">CATE check-in for IN-CLASS secion 1516</a>
-</div>
-
-</div>
+        <h3>What's New</h3>
+<p>Using HTML5 is very easy.    Everything you know about HTML still applies.   Just <a href="/~jperetz/fall2012/tools/html5/">read this HTML5 primer</a> and start using the simpler DOC declaration in your webpages.</p>
+<p>Read this lesson about <a href="lessons/conditionals.html">loop and conditional Javascript statements</a>.</p>
+        </div>
 <div class="span7 well"> 
- 
+<h5>Sign up for a <a class="label label-success" href="http://student.santarosa.edu/"> free student.santarosa.edu </a> webserver account</h5> 
 <h3>Lecture/Labs</h3>
 <p>Tuesdays 5:30-8:30PM<br>
   Maggini Hall Room 2923
 </p>
-<h3>Elluminate</h3>
-<p>Visit <a href="http://www.cccconfer.org/">www.cccconfer.org</a> <br>
+<h3>Live Broadcast</h3>
+<p>Visit <a class="label label-success"  href="http://www.cccconfer.org/">www.cccconfer.org</a> <br>
   Click the Student Log-In button under the <strong>Teach & Confer logo</strong><br>
   Locate your meeting and click Go
   Fill out the form and enter the passcode: 341189</p>
+  <p>Watch the <a class="label label-success"  href="https://sas.elluminate.com/site/external/recording/playback/link/table/meeting?suid=M.4499381339B7E207E8E6778F438C63">Class Archives</a></p>
 <h3>Office Hours</h3>
 <p>Tuesdays 4:00-5:00PM<br>
   Maggini Hall CS Dept Adjunct Office
   <br>
 </p>
 <h3>Class Forums</h3>
-<p>To post a question or comment to the instructor or class, you can either use the
-<a href="http://online.santarosa.edu/cgi-bin/autocate/presentation/makepre.cgi">Class Message Board on CATE</a>, or you can post a comment at the bottom of any webpage on the syllabus.   Students can update their profiles on CATE to opt out of receiving emails from the Class Message Board.   Students can also create profiles on Disqus when leaving a comment, allowing them to set email notifications to follow discussions.  
+<p>To post a question or comment to the instructor and/or class, you can either use the <a class="label label-success"  href="http://online.santarosa.edu/cgi-bin/autocate/presentation/makepre.cgi">Class Message Board on CATE</a>, or you can post a comment at the bottom of any webpage on the syllabus.   Students can update their profiles on CATE to opt out of receiving emails from the Class Message Board.   Students can also create profiles on Disqus when leaving a comment, allowing them to set email notifications to follow discussions.  </p>
+<h3>CATE Check-in </h3> <p>  
+<a class="label label-success"  href="https://online.santarosa.edu/cgi-bin/autocate/student/checkin.cgi?15146">ONLINE section 1371</a>   &nbsp;&nbsp; &amp;&nbsp;&nbsp;
+<a class="label label-success"  href="https://online.santarosa.edu/cgi-bin/autocate/student/checkin.cgi?15147">IN-CLASS section 1516</a>  
+</p>
 </div>
 
 </div>
@@ -62,7 +59,25 @@
       <div class="row">
         <div class="span7">
           <h2>Course Information</h2>
-          <h4>Required Materials</h4>
+            <h4>Official Course Catalog Description</h4>
+          <p>JavaScript is a cross-platform, object-based scripting language. This course provides a solid foundation in JavaScript and shows students how to create scripts and incorporate them into webpages.  Projects include writing Javascript and JQuery programs that manage dynamic content and webpage elements such as image slideshows; menus, tabs and panels; form controls and dialogues.   Students will also create data-driven web elements using AJAX and API interfaces to web services such as maps and social media.</p>
+          <h4>Student Learning Objectives</h4>
+          <p><strong>Student Learning Outcomes:<br>
+          </strong></p>
+          <div>Students will be able to:</div>
+          <div>1.  Analyze and customize existing JavaScript code.</div>
+          <div>2.  Code and deploy basic to intermediate JavaScript, jQuery, and AJAX programs.</div>
+          <div>3.  Demonstrate and apply the Document Object Model (DOM) and other fundamental Internet technologies accessible through Javascript.</div>
+          <div> </div>
+          <strong><br>
+          Objectives:
+          </strong>
+          <div>Upon completion of the course, students will be able to:</div>
+          <div>1. Analyze and customize Javascript code.</div>
+          <div>2. Write JavaScript, jQuery, and AJAX code that selects and manages document elements, validates form data, creates interactive elements, accesses server data.</div>
+          <div>3. Apply appropriate user experience and interactive design concepts to custom websites.</div>
+          <div>4. Demonstrate JavaScript scripting skills in a variety of student-designed projects.</div>
+<h4>Required Materials</h4>
            <p>There is NO REQUIRED SOFTWARE, although you will need a good code editor and a webserver account (an SRJC student account is fine, but you may also use your own domain or another host.) You will also need to use a current version of an HTML5 browser with a great element inspector (Chrome, FireFox, Opera or Internet Explorer 9+ will work.)</p>
 
 <p>You may use the Computer Studies labs in Santa Rosa and Petaluma during regularly scheduled lab hours, or you may also work at your own computer. You MUST be self-sufficient with basic webserver fundamentals and be able to use FTP to deploy a website.</p>
@@ -258,16 +273,16 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <td width="44%"><strong>Lessons</strong></td>
     <td width="21%"><strong>Assignment</strong></td>
   </tr>
-  <tr class="current-week">
+  <tr >
     <td width="18%">Aug 21</td>
     <td width="44%"><a href="lessons/fundamentals.html">Javascript Fundamentals</a><br>
       <a href="lessons/expressions.html">Variables, Operators &amp; Expressions</a></td>
     <td width="21%">&nbsp;</td>
    
   </tr>
-  <tr>
+  <tr class="current-week">
     <td>Aug 28</td>
-    <td>Conditionals and Loops</td>
+    <td><a href="lessons/conditionals.html">Conditionals and Loops</a></td>
     <td>Project 1</td>
    
   </tr>
@@ -291,19 +306,19 @@ possible to better ensure such accommodations are implemented in a timely fashio
   </tr>
   <tr>
     <td>Sept 25</td>
-    <td>Document and Window Objects</td>
+    <td>no class</td>
     <td>Project 3</td>
   
   </tr>
   <tr>
     <td>Oct 2</td>
-    <td>Forms and AJAX</td>
+    <td>Document and Window Objects</td>
     
     <td>Project 4</td>
   </tr>
   <tr>
     <td>Oct 9</td>
-    <td>&nbsp;</td>
+    <td>Forms and AJAX</td>
    
     <td><a href="http://online.santarosa.edu/testbank/?24871">Midterm</a></td>
   </tr>
