--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h3>What's New</h3>
 <p>Using HTML5 is very easy.    Everything you know about HTML still applies.   Just <a href="/~jperetz/fall2012/tools/html5/">read this HTML5 primer</a> and start using the simpler DOC declaration in your webpages.</p>
 <p>Read this lesson about <a href="lessons/conditionals.html">loop and conditional Javascript statements</a>.</p>
+<p>Get started on <a href="projects/programming/index.html">Project 1: Javascript Programming with an HTML5 Grid</a>.  Due date is September 6.</p>
         </div>
 <div class="span7 well"> 
 <h5>Sign up for a <a class="label label-success" href="http://student.santarosa.edu/"> free student.santarosa.edu </a> webserver account</h5> 
@@ -283,7 +284,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
   <tr class="current-week">
     <td>Aug 28</td>
     <td><a href="lessons/conditionals.html">Conditionals and Loops</a></td>
-    <td>Project 1</td>
+    <td><a href="projects/programming/index.html">Project 1</a></td>
    
   </tr>
   <tr>
