--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -12,6 +12,8 @@
 <div class="row">
   <h2>Project 1: Programming a HTML5 Grid with Javascript </h2>
 <div class="well">
+<h4>This Project is due September 6, 2012 at midnight.</h4>
+<p>&nbsp;</p>
 <h4>What you will learn in this project</h4>
 <ul>
 <li>Javascript programming techniques
@@ -19,7 +21,7 @@
     <li><a href="http://www.w3schools.com/js/js_loop_for_in.asp">the FOR..IN statement</a></li>
     <li><a href="http://www.w3schools.com/js/js_if_else.asp">the IF statement</a></li>
     <li><a href="http://www.w3schools.com/js/js_loop_while.asp">the DO..WHILE statement</a></li>
-    <li><a href="http://www.w3schools.com/js/js_switch.asp">the SWITCH statement</a></li>
+    <li><a href="http://www.w3schools.com/js/js_operators.asp">The Modulus (division remainder) Operator</a></li>
   </ul>
 </li>
 <li>A quick introduction to DOM navigation and manipulation
@@ -27,6 +29,7 @@
     <li><a href="http://www.w3schools.com/jsref/met_doc_getelementbyid.asp">getElementById( )</a></li>
     <li>getElementsByClassName( )</li>
     <li><a href="http://www.w3schools.com/jsref/met_document_getelementsbytagname.asp">getElementsByTagName( )</a></li>
+   <li><a href="http://www.w3schools.com/jsref/prop_html_innerhtml.asp">innerHTML</a></li>
     <li><a href="http://www.w3schools.com/jsref/dom_obj_element.asp">setAttribute( )</a></li>
   </ul>
 </li>
@@ -38,7 +41,7 @@
 <div class="span6">
 
 <ol>
-<li>Create a basic HTML5 webpage document
+<li>First, create a basic HTML5 webpage document
   <code>
                         <pre class="prettyprint linenums">
 &lt;!DOCTYPE HTML&gt;
@@ -67,16 +70,16 @@
 </code>
 </li>
 <li>
-Twitter Bootstrap has a built-in HTML/CSS grid system which is very easy to use.    We are going to create a simple grid as a Javascript programming playground.  You can use  classes that are defined by Bootstrap such as 'row' and 'span(number)'. First create a div with id of grid and then rows with spans that add up to no more than 12. Feel free to make your own grid of regular or irregular numbers of columns.  Create at least a few rows to work with - you can copy and paste the HTML from here. </li>
+Twitter Bootstrap has a built-in HTML/CSS grid system which is very easy to use.    We are going to create a simple grid as a Javascript programming playground.  You can use  classes that are defined by Bootstrap such as 'row' and 'span(number)'. First create a div with id of <strong>grid</strong> and then rows with spans that add up to no more than 12. For this project it's  OK to use the class &quot;span1&quot; for your blocks. Create at least a few rows to work with - you can copy and paste the HTML from here. </li>
 <code>
 <pre class="prettyprint linenums">
 &lt;div id="grid"&gt;
 &lt;div class="row"&gt;
-&lt;div class="span4"&gt;
+&lt;div class="span1"&gt;
 &lt;/div&gt;
-&lt;div class="span4"&gt;
+&lt;div class="span1"&gt;
 &lt;/div&gt;
-&lt;div class="span4"&gt;
+&lt;div class="span1"&gt;
 &lt;/div&gt;
 &lt;/div&gt;
 ...
@@ -85,37 +88,58 @@ Twitter Bootstrap has a built-in HTML/CSS grid system which is very easy to use.
 </code>
 
 <li>
-Now we can start having some fun with Javascript!    First we will use a few functions that are build into web browsers for 'traversing' web documents.   We'll learn more about the Document Object Model in a few weeks, for now we are going to be using page elements simply to learn about basic Javascript programming statements.  
-</li>
+Now we can start having some fun with Javascript!    First we will use a few functions that are build into web browsers for 'traversing' web documents.   We'll learn more about the Document Object Model in a few weeks. For now, it's important for you just to know that these functions return <em>object references</em> to the page elements that meet the criteria we ask for. </li>
 <code>
 <pre class="prettyprint linenums">
+// access the grid element - returns a single object
 var grid = document.getElementById("grid");
+// access the grid rows and cells elements - each returns a set of object
 var spans = grid.getElementsByClassName("span2");
 var rows = grid.getElementsByClassName("row");
 </pre>
 </code>
 
-<li>
+<li>First, let's add content to each of the grid cells.  Assigning a value to the  innerHTML property of a webpage element updates its content.  The value would typically be a string and can contain content and markup.    
 </li>
 <code>
 <pre class="prettyprint linenums">
+// the FOR .. IN statement gives us a built-in interation feature (x)
+for (x in spans)
+    {
+		spans[x].innerHTML="<p>"+ x +"</p>";
+	}
 </pre>
 </code>
 
-<li>
+<li>Next we'll use a DO ... WHILE loop statement to change the properties of each of the paragraphs to align them properly.   We can create a new set using getElementsByTagName().   The WHILE loop statements have fewer features than FOR..IN - notice how you need to define and update the iterator manually.   Notice also how you need to use the LENGTH property of the set to determine how many members are in the set.    The FOR..IN statement does this for you automatically. 
+NOTE that this statement also requires you to take on alot of responsibility.  It is easy to create an INFINITE LOOP and freeze your browser session and possibly your operating system.  Don't forget to increment the counter!</li>
+<code>
+</code><code>
+<pre class="prettyprint linenums">
+var content = grid.getElementsByTagName("p");
+var x = 0;
+do {
+	content[x].style.width = "20px";
+	content[x].style.margin = "10px auto 10px auto";
+	content[x].style.textAlign = "right";
+	x++;
+} while (x < spans.length);
+</pre>
+</code>
+
+<li>We can get interesting features by adding an IF statement within our iteration loop.   In this example we are using a MODULUS operator to test for odd or even values, enabling us stripe the rows or columns of our grid.   Notice how the IF statement doesn't have an effect unless we iterate the objects 'through' it, unlike CSS, where all we need to do is declare a rule, and all members are effected. 
 </li>
 <code>
 <pre class="prettyprint linenums">
+for (x in rows) {
+	if (x%2)  {
+		rows[x].style.backgroundColor = "#EEE";	
+	}	
+};	
 </pre>
 </code>
-
-<li>
+<li>OK, the rest is up to you.  Create your own grid and Javascript code to explore how this works.  Create at least three additional Javascript processes that expand on this concept.     List your work on the webpage, with a short paragraph of any issues you needed to resolve, how you resolved them, and how much time you spent on this project. 
 </li>
-<code>
-<pre class="prettyprint linenums">
-</pre>
-</code>
-
 
 
 </ol>
